# axum-example

./: README.md  create_table.sql  docker-compose.yml
axum/: .env  Cargo.toml
axum/src/: main.rs
axum/src/config/: db.rs
axum/src/domain/: create_dino.rs  dino.rs  mod.rs
axum/src/service/: dino_service.rs  mod.rs
bruno-collection/: Dino-app.json
postgres/: Dockerfile  create_table.sql
